...
    <string name="mobile_files_rename_reloading">Name saved. Refreshing files…</string>
    <string name="mobile_files_rename_error">Couldn’t rename. Try again or edit the name.</string>
    <string name="mobile_files_rename_reload_error">Name saved, but couldn’t reload files.</string>
    <string name="mobile_navigation_menu">Menu</string>
    <string name="mobile_navigation_close">Close navigation</string>
    <string name="mobile_destination_files">Files</string>
    <string name="mobile_destination_search">Search</string>
    <string name="mobile_destination_transfers">Transfers</string>
    <string name="mobile_destination_account">Account</string>
    <string name="mobile_state_loading">Loading</string>
    <string name="mobile_state_empty_title">Nothing here yet</string>
    <string name="mobile_state_empty_message">This folder is empty.</string>
    <string name="mobile_state_error_title">Couldn’t load this</string>
    <string name="mobile_state_error_message">Check your connection and try again.</string>
...
    <string name="mobile_settings_history_description">Keep watched files and transfer activity in your put.io history.</string>
    <string name="mobile_settings_trash">Move deleted files to Trash</string>
    <string name="mobile_settings_trash_description">If you disable this, your files will be deleted permanently. Otherwise, we’ll keep them for 14 days.</string>
    <string name="mobile_settings_trash_confirm_title">Turn off Trash?</string>
    <string name="mobile_settings_trash_confirm_message">Deleted files will no longer be recoverable. Continue?</string>
    <string name="mobile_settings_trash_confirm_action">Turn off</string>
    <string name="mobile_action_back">Back</string>
    <string name="mobile_auth_restoring">Restoring your session</string>
    <string name="mobile_auth_validating">Checking your session</string>
    <string name="mobile_auth_signing_out">Signing out</string>
    <string name="mobile_auth_signed_out_title">Sign in to put.io</string>
    <string name="mobile_auth_signed_out_message">Open the secure put.io sign-in page in your browser.</string>
    <string name="mobile_auth_expired_title">Session expired</string>
...
    <string name="mobile_transfer_actions">Transfer actions</string>
    <string name="mobile_transfers_refresh">Refresh</string>
    <string name="mobile_transfers_refresh_error">Couldn’t refresh transfers.</string>
    <string name="mobile_transfers_load_more">Load more</string>
    <string name="mobile_transfers_loading_more">Loading more transfers</string>
    <string name="mobile_transfers_paging_error">Couldn’t load more transfers.</string>
    <string name="mobile_transfers_add">Add transfer</string>
    <string name="mobile_transfers_add_title">Add transfer</string>
    <string name="mobile_transfers_add_label">URLs or magnet links</string>
    <string name="mobile_transfers_add_placeholder">https://example.com/file or magnet:?xt=…</string>
    <string name="mobile_transfers_add_invalid">Enter a valid HTTP URL or magnet link.</string>
    <string name="mobile_transfers_add_help">Separate several links with spaces or new lines.</string>
    <string name="mobile_transfers_add_too_many">Add up to 100 links at a time.</string>
...
    <string name="mobile_playback_subtitles_disabled">Off</string>
    <string name="mobile_playback_now_playing">Now playing</string>
    <string name="mobile_playback_audio_file">Audio file</string>
    <string name="mobile_playback_audio_track_disambiguated">%1$s (track %2$d)</string>
    <string name="mobile_playback_position">Playback position</string>
    <string name="mobile_playback_position_value">%1$s of %2$s</string>
    <string name="mobile_playback_audio_control">Audio</string>
    <string name="mobile_playback_captions_control">Captions</string>
    <string name="mobile_playback_no_captions">No captions available</string>
    <string name="mobile_playback_speed_control">Speed (%1$s)</string>
    <string name="mobile_playback_resume_title">Resume from %1$s?</string>
    <string name="mobile_playback_resume">Resume</string>
    <string name="mobile_playback_restart">Start over</string>
    <string name="mobile_share_too_long">This text is too long. Paste fewer links.</string>
...
