...
import androidx.compose.ui.text.rememberTextMeasurer
import androidx.compose.ui.unit.Dp
import androidx.compose.ui.unit.dp
import kotlinx.coroutines.CoroutineStart
import kotlinx.coroutines.launch

internal const val MOBILE_NAV_MENU_TAG = "mobile-navigation-menu"
internal const val MOBILE_NAV_DRAWER_TAG = "mobile-navigation-drawer"

internal enum class MobileNavigationLayout { Bar, Rail, Modal }

@Composable
internal fun mobileNavigationLayout(width: Dp, height: Dp): MobileNavigationLayout {
...
